--- a/OneDrive/Desktop/GAunit2/delivs/love-it-or-leave-it/views/home.ejs
+++ b/OneDrive/Desktop/GAunit2/delivs/love-it-or-leave-it/views/home.ejs
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Love it or leave it</title>
+    <title>Love It Or Leave It</title>
 </head>
 <body>
-    <nav>
-        <a href='/'>Home</a>
-    </nav>
-    <
+    <h1>home</h1>
+    
 </body>
 </html>
