--- a/OneDrive/Desktop/GAunit2/delivs/love-it-or-leave-it/views/layout.ejs
+++ b/OneDrive/Desktop/GAunit2/delivs/love-it-or-leave-it/views/layout.ejs
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Love it or leave it</title>
 </head>
 <body>
     <nav>
         <a href="/">home</a>
-    <a href =
     </nav>
 </body>
 </html>
